# pet-form

./: README.md
pet-api/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod
pet-api/cmd/api/: main.go
pet-api/internal/database/: database.go  queries.go
pet-api/internal/handlers/: owner.go
pet-api/internal/handlers/owners/: routes.go
pet-api/internal/middlewares/: logger.go
pet-api/internal/models/: Owner.go  Pet.go  Service.go  Veterinarian.go
pet-api/internal/queries/: base_queries.go  owner.go  owner_queries.go  table_creation.go
pet-api/internal/server/: routes.go  server.go
pet-api/internal/utils/: validateData.go
pet-api/sql-queries/: owner.sql  pet.sql  service-instance.sql  vet.sql
pet-api/src/: config.rs  main.rs  route.rs
pet-api/src/db/: connection.rs  mod.rs
pet-api/src/db/queries/: init_tables.rs  mod.rs  owner_queries.rs  pet_queries.rs  service_instance_queries.rs  vet_queries.rs  (+1 more)
pet-api/src/handlers/: index.rs  index_handler.rs  mod.rs  owner.rs  owner_handler.rs  pet.rs  pet_handler.rs  service_instance_handler.rs  statistics_handler.rs  vet_handler.rs
pet-api/src/models/: mod.rs  owner.rs  owner_model.rs  pet.rs  pet_model.rs  service_instance_model.rs  statistics_model.rs  vet_model.rs
pet-api/src/schemas/: helper.rs  helper_schema.rs  mod.rs  owner.rs  owner_schema.rs  pet.rs  pet_schema.rs  service_instance_schema.rs  vet_schema.rs
pet-api/src/sql/: create_tables.sql
pet-api/src/utils/: handle_duplicate_error.rs  mod.rs  model_to_response.rs  validator.rs
pet-api/tests/: handler_test.go
(+163 files in other folders)
