[package]
name = "pet-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "mysql", "uuid", "chrono", "sqlx-mysql", "bigdecimal", "rust_decimal"]}
tokio = { version = "1.37.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["cors"]}
uuid = { version = "1.8.0", features = ["serde", "v4"]}
warp = { version = "0.3.7", features = ["tls"]}
log = "0.4.21"
simple_logger = "5.0.0"
chrono = { version = "0.4.38", features = ["serde"]}
rust_decimal = "1.35.0"